--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h2>Hello World</h2>
   <p>This is the first file in my new Git Repo</p>
+  <p>Anew line in our file</p>
   
 </body>
 </html>
