--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h2>Hello World</h2>
+  <div><img src="barry.jpg" style="width:100%;max-width:640px"></div>
   <p>This is the first file in my new Git Repo</p>
   <p>Anew line in our file</p>
   
