--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div><img src="barry.jpg" style="width:100%;max-width:640px"></div>
   <p>This is the first file in my new Git Repo</p>
   <p>Anew line in our file</p>
+  <div><img src="barry1.jpg" alt="hello Git" style="width:100%;max-width:940px"></div>
   
 </body>
-</html>
+</html> 
